# rindow-matlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: Packing.cmake
debian/: CMakeLists.txt  CPack.GenericDescription.txt  postinst.in  prerm.in  rindowmatlib.pc.in
include/: CMakeLists.txt
include/rindow/: matlib.h
scripts/: client_generator.php
src/: CMakeLists.txt  add.c  astype.c  bandpart.c  common.c  common.h  cos.c  cumsum.c  cumsumb.cpp  duplicate.c  einsum.cpp  einsum4p1.cpp  equal.c  exp.c  fill.c  gather.c  gather_nd.cpp  gatherb.cpp  greater.c  greater_eq.c  im2col1d.c  im2col2d.c  im2col3d.c  imagecopy.c  imax.c  imin.c  increment.c  isnan.c  less.c  less_eq.c  log.c  masking.c  matrixcopy.c  maximum.c  minimum.c  multiply.c  nan2num.c  not.c  not_equal.c  onehot.c  (+25 more)
src/seq/: CMakeLists.txt
tests/: AddTest.cpp  AstypeTest.cpp  BandpartTest.cpp  CMakeLists.txt  CommonTest.cpp  CosTest.cpp  CumsumTest.cpp  DuplicateTest.cpp  Einsum4p1Test.cpp  EinsumTest.cpp  GatherTest.cpp  GreaterEqualTest.cpp  GreaterTest.cpp  Im2col1dTest.cpp  Im2col2dTest.cpp  Im2col3dTest.cpp  ImagecopyTest.cpp  IminTest.cpp  LessTest.cpp  LogTest.cpp  MaskingTest.cpp  MatrixcopyTest.cpp  MinimumTest.cpp  MultiplyTest.cpp  NDArrayTest.cpp  NotEqualTest.cpp  OnehotTest.cpp  RandomNormalTest.cpp  RandomSequenceTest.cpp  RandomUniformTest.cpp  ReduceArgmaxTest.cpp  ReduceGatherTest.cpp  SinTest.cpp  SliceTest.cpp  SoftmaxTest.cpp  SumTest.cpp  TanTest.cpp  TopKTest.cpp  TransposeTest.cpp  Utils.cpp  (+3 more)
thread/: CMakeLists.txt  ParallelOperation.hpp  ThreadPool.cpp  ThreadPool.hpp  add.cpp  astype.cpp  bandpart.cpp  common.cpp  common.hpp  cos.cpp  cumsum.cpp  cumsumb.cpp  duplicate.cpp  einsum.cpp  einsum4p1.cpp  equal.cpp  exp.cpp  fill.cpp  gather.cpp  gatherb.cpp  gathernd.cpp  greater.cpp  greater_eq.cpp  im2col1d.cpp  im2col2d.cpp  im2col3d.cpp  imagecopy.cpp  imax.cpp  imin.cpp  increment.cpp  isnan.cpp  less.cpp  less_eq.cpp  log.cpp  masking.cpp  matrixcopy.cpp  maximum.cpp  minimum.cpp  multiply.cpp  nan2num.cpp  (+27 more)
threadtest/: BandpartTest.cpp  CMakeLists.txt  CumsumTest.cpp  CumsumbTest.cpp  Einsum4p1Test.cpp  EqualTest.cpp  ExpTest.cpp  FillTest.cpp  GatherbTest.cpp  GatherndTest.cpp  Im2col1dTest.cpp  Im2col2dTest.cpp  Im2col3dTest.cpp  ImagecopyTest.cpp  ImaxTest.cpp  IncrementTest.cpp  IsnanTest.cpp  LessEqualTest.cpp  MaximumTest.cpp  Nan2numTest.cpp  NotTest.cpp  PowTest.cpp  RandomUniformTest.cpp  ReciprocalTest.cpp  ReduceMaxTest.cpp  ReduceSumTest.cpp  RepeatTest.cpp  RsqrtTest.cpp  SearchSortedTest.cpp  SliceTest.cpp  SqrtTest.cpp  SquareTest.cpp  SumTest.cpp  TanhTest.cpp  Utils.cpp  Utils.h  ZerosTest.cpp
vclib/: CMakeLists.txt  common.c  rindow_matlib_astype.c  rindow_matlib_common_get_address.c  rindow_matlib_common_get_nprocs.c  rindow_matlib_common_get_num_threads.c  rindow_matlib_common_get_parallel.c  rindow_matlib_common_get_version.c  rindow_matlib_d_add.c  rindow_matlib_d_bandpart.c  rindow_matlib_d_cos.c  rindow_matlib_d_cumsum.c  rindow_matlib_d_cumsumb.c  rindow_matlib_d_duplicate.c  rindow_matlib_d_einsum.c  rindow_matlib_d_einsum4p1.c  rindow_matlib_d_equal.c  rindow_matlib_d_exp.c  rindow_matlib_d_gather.c  rindow_matlib_d_gatherb.c  rindow_matlib_d_gathernd.c  rindow_matlib_d_greater.c  rindow_matlib_d_greater_equal.c  rindow_matlib_d_imagecopy.c  rindow_matlib_d_imax.c  rindow_matlib_d_imin.c  rindow_matlib_d_increment.c  rindow_matlib_d_isnan.c  rindow_matlib_d_less.c  rindow_matlib_d_less_equal.c  rindow_matlib_d_log.c  rindow_matlib_d_masking.c  rindow_matlib_d_matrixcopy.c  rindow_matlib_d_maximum.c  rindow_matlib_d_minimum.c  rindow_matlib_d_multiply.c  rindow_matlib_d_nan2num.c  rindow_matlib_d_not.c  rindow_matlib_d_notequal.c  rindow_matlib_d_onehot.c  (+99 more)
